--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
   <!-- ===== HERO SECTION ===== -->
   <section class="hero">
     <div class="slider">
-      <img src="fashion.png" alt="Fashion">
-      <img src="model.jpeg" alt="Model">
-      <img src="ufc.jpeg" alt="UFC">
-      <img src="nature.png" alt="Nature">
-      <img src="wild.png" alt="Animal">
-      <img src="book.jpeg" alt="Books">
+      <img src="images/img26.png" alt="Fashion">
+      <img src="images/img30.png" alt="Model">
+      <img src="images/img29.png" alt="UFC">
+      <img src="images/img28.png" alt="Nature">
+      <img src="images/img27.png" alt="Animal">
+      <img src="images/img31.png" alt="Books">
       <!-- duplicate for smooth infinite scroll -->
-      <img src="fashion.png" alt="Fashion">
-      <img src="model.jpeg" alt="Model">
-      <img src="ufc.jpeg" alt="UFC">
-      <img src="nature.png" alt="Nature">
-      <img src="wild.png" alt="Animal">
-      <img src="book.jpeg" alt="Books">
+      <img src="images/img25.png" alt="Fashion">
+      <img src="images/img24.png" alt="Model">
+      <img src="images/img23.png" alt="UFC">
+      <img src="images/img22.png" alt="Nature">
+      <img src="images/img21.png" alt="Animal">
+      <img src="images/img20.png" alt="Books">
     </div>
     <div class="hero-text">
       <h1>Zyro Magazine</h1>
@@ -56,19 +56,19 @@
     <h2>Featured Categories</h2>
     <div class="categories">
       <div class="category-card">
-        <img src="f2.png" alt="Fashion">
+        <img src="images/img69.png" alt="Fashion">
         <h3>Fashion</h3>
       </div>
       <div class="category-card">
-        <img src="nature1.png" alt="Nature">
+        <img src="images/img16.png" alt="Nature">
         <h3>Nature</h3>
       </div>
       <div class="category-card">
-        <img src="sport.png" alt="Sports">
+        <img src="images/img18.png" alt="Sports">
         <h3>Sports</h3>
       </div>
       <div class="category-card">
-        <img src="culture.png" alt="Culture">
+        <img src="images/img20.png" alt="Culture">
         <h3>Culture</h3>
       </div>
     </div>
@@ -79,15 +79,15 @@
     <h2>Latest Articles</h2>
     <div class="articles">
       <div class="article-card">
-        <img src="art1.png" alt="Article1">
+        <img src="images/img12.png" alt="Article1">
         <div class="article-content">
           <h4>Bold Fashion Trends</h4>
-          <p>Step into the world of bold fashion trends where style meets audacity. From futuristic streetwear to edgy runway statements, explore the designs that are reshaping the fashion landscape. Uncover the inspiration behind these daring looks and see how they set the stage for tomorrow’s style icons. Stay ahead of the curve and let your wardrobe speak volumes about your personality</p>
+          <p>Step into the world of bold fashion trends where style meets audacity. From futuristic streetwear to edgy runway statements, explore the designs that are reshaping the fashion landscape. Uncover the inspiration behind these daring looks and see how they set the stage for tomorrow’s style icons. Stay ahead of the curve and let your wardrobe speak volumes about your personality.</p>
           <a href="#">Read More</a>
         </div>
       </div>
       <div class="article-card">
-        <img src="art2.png" alt="Article2">
+        <img src="images/img10.png" alt="Article2">
         <div class="article-content">
           <h4>Nature's Wonders</h4>
           <p>Discover the breathtaking beauty of our planet’s hidden gems. From towering mountains and lush forests to cascading waterfalls and serene rivers, Nature’s Wonders inspire awe and remind us of the planet’s unmatched splendor. Dive deep into the mysteries of the wild and explore landscapes that feel almost otherworldly. Every corner holds a story waiting to be uncovered.</p>
@@ -95,7 +95,7 @@
         </div>
       </div>
       <div class="article-card">
-        <img src="art3.png" alt="Article3">
+        <img src="images/img15.png" alt="Article3">
         <div class="article-content">
           <h4>Sports Highlights</h4>
           <p>Experience the thrill of the game with the latest sports highlights. From record-breaking performances to unforgettable moments of triumph, witness the energy, skill, and determination of top athletes. Whether it’s football, basketball, or extreme sports, these highlights capture the spirit of competition and the power of human perseverance. Don’t miss the action!</p>
