--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Zyro Magazine</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 <body>
 
@@ -140,13 +142,16 @@
 
   <!-- ===== FOOTER ===== -->
   <footer>
-    <p>&copy; 2025 Zyro Magazine. All Rights Reserved.</p>
-    <div class="socials">
-      <a href="#">Instagram</a> |
-      <a href="#">Facebook</a> |
-      <a href="#">Twitter</a>
-    </div>
-  </footer>
+  <p>&copy; 2025 Zyro Magazine. All Rights Reserved.</p>
+  <div class="socials">
+    <a href="#"><i class="fab fa-instagram"></i></a> |
+    <a href="#"><i class="fab fa-facebook"></i></a> |
+    <a href="#"><i class="fa-brands fa-x-twitter">𝕏</i></a>
+ 
+
+  </div>
+</footer>
+
 
 </body>
 </html>
