Added video background to Model of the Week section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
 </head>
 <body>
 
@@ -59,6 +58,78 @@
       We bring a cinematic and edgy vibe to every page, capturing the essence of creativity and lifestyle.
     </p>
   </section>
+
+  <!-- ===== MODEL OF THE DAY ===== -->
+  <!-- ===== MODEL OF THE DAY ===== -->
+<!-- ===== MODEL OF THE WEEK ===== -->
+ <!-- <section id="model-week">
+  <video autoplay muted loop playsinline class="bg-video">
+    <source src="images/bg.mp4" type="video/mp4">
+  </video>
+
+  <div class="model-week-content">
+    <!-- Tera existing model photo + article yahi rahega -->
+  <!-- </div>
+</section> --> -->
+
+<section id="model-day">
+  <video class="bg-video" autoplay muted loop playsinline>
+    <source src="images/bg222.mp4" type="video/mp4">
+  </video>
+ <h2 id="model-week-title">🌟 Model of the Week</h2>
+
+
+  <!-- Model 1 -->
+  <div class="model-highlight">
+    <div class="model-img">
+      <img src="images/img31.png" alt="Model of the Week">
+    </div>
+    <div class="model-article">
+      <h3>Emily Rose</h3>
+      <p class="quote">"Elegance is the only beauty that never fades."</p>
+      <p class="about">
+        Emily Rose has been selected as our Model of the Week for her stunning elegance, 
+        confidence, and bold presence in the fashion world.
+      </p>
+      <a href="#" class="btn">Read Full Story</a>
+    </div>
+  </div>
+
+  <!-- Model 2 -->
+  <div class="model-highlight reverse">
+    <div class="model-img">
+      <img src="images/img30.png" alt="Model of the Week">
+    </div>
+    <div class="model-article">
+      <h3>Sophia Lane</h3>
+      <p class="quote">"Confidence is the best outfit."</p>
+      <p class="about">
+        Sophia Lane brings fearless energy and modern fashion vibes, 
+        setting new trends with her bold choices.
+      </p>
+      <a href="#" class="btn">Read Full Story</a>
+    </div>
+  </div>
+
+  <!-- Model 3 -->
+  <div class="model-highlight">
+    <div class="model-img">
+      <img src="images/img29.png" alt="Model of the Week">
+    </div>
+    <div class="model-article">
+      <h3>Ava Green</h3>
+      <p class="quote">"Style is a way to say who you are without speaking."</p>
+      <p class="about">
+        Ava Green has captured attention with her unique elegance, 
+        combining simplicity with powerful presence.
+      </p>
+      <a href="#" class="btn">Read Full Story</a>
+    </div>
+  </div>
+</section>
+<!-- <p class="ask-line">✨ Who do you think should be the next <strong>Model of the Week</strong>? Tell us your choice! 👇</p> -->
+
+
 
   <!-- ===== FEATURES / CATEGORIES ===== -->
   <section id="features">
@@ -142,16 +213,13 @@
 
   <!-- ===== FOOTER ===== -->
   <footer>
-  <p>&copy; 2025 Zyro Magazine. All Rights Reserved.</p>
-  <div class="socials">
-    <a href="#"><i class="fab fa-instagram"></i></a> |
-    <a href="#"><i class="fab fa-facebook"></i></a> |
-    <a href="#"><i class="fa-brands fa-x-twitter">𝕏</i></a>
- 
-
-  </div>
-</footer>
-
+    <p>&copy; 2025 Zyro Magazine. All Rights Reserved.</p>
+    <div class="socials">
+      <a href="#"><i class="fab fa-instagram"></i></a> |
+      <a href="#"><i class="fab fa-facebook"></i></a> |
+      <a href="#"><i class="fa-brands fa-x-twitter">𝕏</i></a>
+    </div>
+  </footer>
 
 </body>
 </html>
