Updated model names in Model of the Week section

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
       <img src="images/img31.png" alt="Model of the Week">
     </div>
     <div class="model-article">
-      <h3>Emily Rose</h3>
+      <h3>Ragini Kumawat(Ratlam)</h3>
       <p class="quote">"Elegance is the only beauty that never fades."</p>
       <p class="about">
-        Emily Rose has been selected as our Model of the Week for her stunning elegance, 
+       Ragini Kumawat has been selected as our Model of the Week for her stunning elegance, 
         confidence, and bold presence in the fashion world.
       </p>
       <a href="#" class="btn">Read Full Story</a>
@@ -101,10 +101,10 @@
       <img src="images/img30.png" alt="Model of the Week">
     </div>
     <div class="model-article">
-      <h3>Sophia Lane</h3>
+      <h3>Sheetal Vishwakarma (Mandsaur)</h3>
       <p class="quote">"Confidence is the best outfit."</p>
       <p class="about">
-        Sophia Lane brings fearless energy and modern fashion vibes, 
+        Sheetal Vishwakarma  brings fearless energy and modern fashion vibes, 
         setting new trends with her bold choices.
       </p>
       <a href="#" class="btn">Read Full Story</a>
@@ -117,10 +117,10 @@
       <img src="images/img29.png" alt="Model of the Week">
     </div>
     <div class="model-article">
-      <h3>Ava Green</h3>
+      <h3>Vaani Rathod (Bhopal) </h3>
       <p class="quote">"Style is a way to say who you are without speaking."</p>
       <p class="about">
-        Ava Green has captured attention with her unique elegance, 
+        Vaani Rathod has captured attention with her unique elegance, 
         combining simplicity with powerful presence.
       </p>
       <a href="#" class="btn">Read Full Story</a>
