Updated Model of the Week prize details

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Zyro Magazine</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
+
+  <script src="script.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -86,10 +88,13 @@
     </div>
     <div class="model-article">
       <h3>Ragini Kumawat(Ratlam)</h3>
+       <p class="prize">🏆 1st Prize: ₹75,000</p>
       <p class="quote">"Elegance is the only beauty that never fades."</p>
       <p class="about">
        Ragini Kumawat has been selected as our Model of the Week for her stunning elegance, 
-        confidence, and bold presence in the fashion world.
+  confidence, and bold presence in the fashion world. 🏆 She has achieved the <strong>1st Prize: ₹75,000</strong>, 
+  standing out among all participants with her remarkable style and charisma. 
+  Her dedication and poise make her a true inspiration for aspiring models everywhere.
       </p>
       <a href="#" class="btn">Read Full Story</a>
     </div>
@@ -102,10 +107,14 @@
     </div>
     <div class="model-article">
       <h3>Sheetal Vishwakarma (Mandsaur)</h3>
+       <p class="prize">🏆 2nd Prize: ₹51,000</p>
       <p class="quote">"Confidence is the best outfit."</p>
       <p class="about">
-        Sheetal Vishwakarma  brings fearless energy and modern fashion vibes, 
-        setting new trends with her bold choices.
+        <p class="about">
+  Sheetal Vishwakarma has impressed everyone with her grace, style, and confidence. 🏆 She has secured the <strong>2nd Prize: ₹51,000</strong>, 
+  showcasing her talent and elegance on the runway. Her passion and charm make her a standout model of the week.
+</p>
+
       </p>
       <a href="#" class="btn">Read Full Story</a>
     </div>
@@ -113,19 +122,24 @@
 
   <!-- Model 3 -->
   <div class="model-highlight">
-    <div class="model-img">
-      <img src="images/img29.png" alt="Model of the Week">
-    </div>
-    <div class="model-article">
-      <h3>Vaani Rathod (Bhopal) </h3>
-      <p class="quote">"Style is a way to say who you are without speaking."</p>
-      <p class="about">
-        Vaani Rathod has captured attention with her unique elegance, 
-        combining simplicity with powerful presence.
-      </p>
-      <a href="#" class="btn">Read Full Story</a>
-    </div>
+  <div class="model-img">
+    <img src="images/img29.png" alt="Vaani Rathod">
   </div>
+  <div class="model-article">
+    <h3>Vaani Rathod (Bhopal)</h3>
+     <p class="prize">🏆 3rd Prize: ₹21,000</p>
+    <p class="about-short">
+      <p class="about">
+  Vaani Rathod has captured attention with her unique elegance and bold presence. 🏆 She has earned the <strong>3rd Prize: ₹21,000</strong>, 
+  making a remarkable mark among all contestants. Her poise and dedication reflect her rising potential in the fashion world.
+</p>
+
+    </p>
+
+    <a href="#" class="btn read-more-btn">Read Full Story</a>
+  </div>
+</div>
+
 </section>
 <!-- <p class="ask-line">✨ Who do you think should be the next <strong>Model of the Week</strong>? Tell us your choice! 👇</p> -->
 
